tests/rosetta/out/Dart/blum-integer.dart
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:29:29Z
bool isPrime(int n) {
  if (n < 2) {
    return false;
  }
  if (n % 2 == 0) {
    return n == 2;
  }
  if (n % 3 == 0) {
    return n == 3;
  }
  var d = 5;
  while ((d as num) * (d as num).toString().compareTo(n.toString()) <= 0) {
    if (n % (d as num) == 0) {
      return false;
    }
    d = (d as num) + 2;
    if (n % (d as num) == 0) {
      return false;
    }
    d = (d as num) + 4;
  }
  return true;
}

int firstPrimeFactor(int n) {
  if (n == 1) {
    return 1;
  }
  if (n % 3 == 0) {
    return 3;
  }
  if (n % 5 == 0) {
    return 5;
  }
  var inc = [4, 2, 4, 2, 4, 6, 2, 6];
  var k = 7;
  var i = 0;
  while ((k as num) * (k as num).toString().compareTo(n.toString()) <= 0) {
    if (n % (k as num) == 0) {
      return k;
    }
    k = (k as num) + (inc[i] as num);
    i = (((i as num) + 1) as num) % inc.length;
  }
  return n;
}

int indexOf(String s, String ch) {
  var i = 0;
  while (i.toString().compareTo(s.length.toString()) < 0) {
    if (s.toString().substring(i, (i as num) + 1) == ch) {
      return i;
    }
    i = (i as num) + 1;
  }
  return -1;
}

String padLeft(int n, int width) {
  var s = n.toString();
  while (s.length < width) {
    s = ' ' + s;
  }
  return s;
}

String formatFloat(double f, int prec) {
  var s = f.toString();
  var idx = indexOf(s, '.');
  if (idx.toString().compareTo(0.toString()) < 0) {
    return s;
  }
  var need = ((idx as num) + 1 as num) + prec;
  if (s.length.toString().compareTo(need.toString()) > 0) {
    return s.toString().substring(0, need);
  }
  return s;
}

void main() {
  List<int> blum = [];
  var counts = [0, 0, 0, 0];
  var digits = [1, 3, 7, 9];
  var i = 1;
  var bc = 0;
  while (true) {
    var p = firstPrimeFactor(i);
    if ((p as num) % 4 == 3) {
      var q = int.parse(((i as num) / (p as num)));
      if (q != p && (q as num) % 4 == 3 && isPrime(q)) {
        if (bc.toString().compareTo(50.toString()) < 0) {
          blum = List.from(blum)..add(i);
        }
        var d = (i as num) % 10;
        if (d == 1) {
          counts[0] = (counts[0] as num) + 1;
        }
        else 
        if (d == 3) {
          counts[1] = (counts[1] as num) + 1;
        }
        else 
        if (d == 7) {
          counts[2] = (counts[2] as num) + 1;
        }
        else 
        if (d == 9) {
          counts[3] = (counts[3] as num) + 1;
        }
        bc = (bc as num) + 1;
        if (bc == 50) {
          print('First 50 Blum integers:');
          var idx = 0;
          while (idx.toString().compareTo(50.toString()) < 0) {
            var line = '';
            var j = 0;
            while (j.toString().compareTo(10.toString()) < 0) {
              line = line + padLeft(blum[idx], 3) + ' ';
              idx = (idx as num) + 1;
              j = (j as num) + 1;
            }
            print(line.toString().substring(0, line.length - 1));
          }
          break;
        }
      }
    }
    if ((i as num) % 5 == 3) {
      i = (i as num) + 4;
    }
    else {
      i = (i as num) + 2;
    }
  }
}

void main() {
  main();
}

bool _equal(dynamic a, dynamic b) {
    if (a is List && b is List) {
        if (a.length != b.length) return false;
        for (var i = 0; i < a.length; i++) { if (!_equal(a[i], b[i])) return false; }
        return true;
    }
    if (a is Map && b is Map) {
        if (a.length != b.length) return false;
        for (var k in a.keys) { if (!b.containsKey(k) || !_equal(a[k], b[k])) return false; }
        return true;
    }
    return a == b;
}

String _formatDuration(Duration d) {
    if (d.inMicroseconds < 1000) return '${d.inMicroseconds}µs';
    if (d.inMilliseconds < 1000) return '${d.inMilliseconds}ms';
    return '${(d.inMilliseconds/1000).toStringAsFixed(2)}s';
}

void _json(dynamic v) {
    print(jsonEncode(v));
}


dynamic _min(dynamic v) {
    List<dynamic>? list;
    if (v is List) list = v;
    else if (v is Map && v['items'] is List) list = (v['items'] as List);
    else if (v is Map && v['Items'] is List) list = (v['Items'] as List);
    else { try { var it = (v as dynamic).items; if (it is List) list = it; } catch (_) {} }
    if (list == null || list.isEmpty) return 0;
    var m = list[0];
    for (var n in list) { if ((n as Comparable).compareTo(m) < 0) m = n; }
    return m;
}

num _sum(dynamic v) {
    Iterable<dynamic>? list;
    if (v is Iterable) list = v;
    else if (v is Map && v['items'] is Iterable) list = (v['items'] as Iterable);
    else if (v is Map && v['Items'] is Iterable) list = (v['Items'] as Iterable);
    else { try { var it = (v as dynamic).items; if (it is Iterable) list = it; } catch (_) {} }
    if (list == null) return 0;
    num s = 0;
    for (var n in list) s += (n as num);
    return s;
}

bool _runTest(String name, void Function() f) {
    stdout.write('   test $name ...');
    var start = DateTime.now();
    try {
        f();
        var d = DateTime.now().difference(start);
        stdout.writeln(' ok (${_formatDuration(d)})');
        return true;
    } catch (e) {
        var d = DateTime.now().difference(start);
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        return false;
    }
}
